# web3indexer

./: .env sample  .gitignore  Cargo.toml  readme.md
src/: chain_data.rs  main.rs
