[package]
name = "rustIndexerApi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.5.0-rc.1"
rocket_contrib = "0.4"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
reqwest = { version = "0.11", features = [
    "json",
    "tokio-native-tls",
] } # Ensure it's compatible with tokio 1.x
tokio = { version = "1", features = ["full"] }
dotenv = "0.15"
futures = "0.3"
uuid = "0.8"
